# doto-qt-app

./: .clang-format  CMakeLists.txt
db/: CMakeLists.txt  data_transfer_objects.h  database.cpp  database.h
db/internal/: database_schema.cpp  database_schema.h  db_schema.xdef  mappings.h
db/test/: CMakeLists.txt  db_test.cpp
integration/: CMakeLists.txt  database.cpp  main.cpp
